k8s/formatio/formatio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formatio-api-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: formatio-api
  template:
    metadata:
      labels:
        app: formatio-api
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: formatio-api
          image: ghcr.io/overal-x/api.formatio:v0.1.24
          resources:
            limits:
              memory: "512Mi"
            requests:
              memory: "512Mi"
          ports:
            - containerPort: 3000
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: formatio-api-service
  namespace: default
spec:
  selector:
    app: formatio-api
  ports:
    - name: api
      protocol: TCP
      port: 3000
      targetPort: 3000
    - name: websocket
      protocol: TCP
      port: 9090
      targetPort: 9090
