k8s/formatio/formatio.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formatio-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api-formatio.k8s.overal-x.org
    - ws-formatio.k8s.overal-x.org
    secretName: api-formatio.k8s.overal-x.org
  rules:
  - host: api-formatio.k8s.overal-x.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: formatio-api-service
            port:
              number: 3000
  - host: ws-formatio.k8s.overal-x.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: formatio-api-service
            port:
              number: 9090
